--- a/blocks/form/__input-text/form__input-text.css
+++ b/blocks/form/__input-text/form__input-text.css
@@ -1,4 +1,4 @@
-.form__inpur-text {
+.form__input-text {
     width: 416px;
     height: 36px;
     padding: 12px 0 12px 20px;
@@ -12,10 +12,10 @@
   :-moz-placeholder           {color:black;}
   :-ms-input-placeholder      {color:black;}
 @media screen and (max-width: 441px) {
-    .form__inpur-text {
+    .form__input-text {
       width: 360px;}}
 @media screen and (max-width: 375px) {
-    .form__inpur-text {
+    .form__input-text {
       width: 300px;}}
         
 
