--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -7,8 +7,8 @@
     margin: 0;
 }
 
-@media screen and (max-width: 1080px) {
+/* @media screen and (max-width: 1080px) {
     .place__image {
       
     }
-  }
+  } */
