--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,7 +5,7 @@
   display: grid;
   background-color: #f2f2f2;
 }
-
+/* 
 @media screen and (max-width: 1023px) {
   .places {
   }
@@ -15,4 +15,4 @@
   .places {
 
   }
-}
+} */
