--- a/pages/index.css
+++ b/pages/index.css
@@ -21,6 +21,7 @@
 /* Блок places */
 @import url(../blocks/places/places.css);
 @import url(../blocks/place/place.css);
+@import url(../blocks/place/__transform/place__transform.css);
 @import url(../blocks/place/__title/place__title.css);
 @import url(../blocks/place/__image/place__image.css);
 @import url(../blocks/place/__text/place__text.css);
