fix: header font-weight

--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -7,7 +7,7 @@
   color: #000;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 900;
   cursor: pointer;
   transition: opacity .42s, transform .42s ease;
 }
