--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -7,7 +7,7 @@
   font-weight: normal;
   font-size: 11px;
   line-height: 1.2;
-  color: orange;
+  color: #FECDA7;
 }
 
 @media screen and (max-width: 1220px) {
