--- a/blocks/form/__button/form__button.css
+++ b/blocks/form/__button/form__button.css
@@ -5,8 +5,10 @@
     border: 0;
     background-color: black;
     color: #BFBFBF;
-    padding: 12px 9px;
+    padding: 11px 9px;
     transition: 0.25s linear;
+    font-size: 15px;
+    cursor: pointer;
   }
 
 .form__button:hover {
