--- a/blocks/form/__input-text/form__input-text.css
+++ b/blocks/form/__input-text/form__input-text.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     border:0;
     margin-bottom: 22px;
+    outline: none;
   }
 
   ::-webkit-input-placeholder {color: black;}
