--- a/blocks/form/__textarea/form__textarea.css
+++ b/blocks/form/__textarea/form__textarea.css
@@ -4,6 +4,8 @@
     padding: 12px 0 0 20px;
     box-sizing: border-box;
     border: 0;
+    outline: none;
+    resize: none;
   }
 @media screen and (max-width: 441px) {
    .form__textarea {
