--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -6,7 +6,11 @@
     margin: 0;
     padding: 0;
     display: block;
+    position: relative;
+   
   }
+
+  
 
   @media screen and (max-width: 1104px) {
    .video__iframe {
