--- a/pages/index.css
+++ b/pages/index.css
@@ -28,6 +28,7 @@
 
 /* Блок intro */
 @import url(./../blocks/intro/intro.css);
+@import url(./../blocks/intro/__content/intro__content.css);
 @import url(./../blocks/intro/__subtitle/intro__subtitle.css);
 @import url(./../blocks/intro/__title/intro__title.css);
 @import url(./../blocks/intro/__list/intro__list.css);
@@ -47,6 +48,7 @@
 @import url(./../blocks/form/__photo/form__photo.css);
 
 /* Блок video */
+@import url(./../blocks/video/video.css);
 @import url(./../blocks/video/__iframe/video__iframe.css);
 
 /* Блок footer */
