--- a/blocks/intro/__list-title/intro__list-title.css
+++ b/blocks/intro/__list-title/intro__list-title.css
@@ -4,6 +4,12 @@
     text-transform: uppercase;
     margin: 0 0 28px 0;
   }
+
+  @media screen and (max-width: 1104px) {
+    .intro__list-title {
+      margin: 0 0 23px 0;}
+    }
+
   @media screen and (max-width: 605px) {
     .intro__list-title {
        margin: 0 0 20px 0;}}
