--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -10,12 +10,17 @@
     .intro__list {
        grid-template-columns: repeat(2, 1fr);
        grid-column-gap: 50px;
-       grid-row-gap: 20px;}}
+       grid-row-gap: 40px;
+      }
+    }
+       
 @media screen and (max-width: 605px) {
     .intro__list {
        grid-template-columns: 1fr;
        grid-row-gap: 20px;
        grid-column-gap: 0;
        margin-bottom: 30px;
-       justify-items: center;}}
+       justify-items: center;
+      }
+    }
          
