--- a/blocks/video/video.css
+++ b/blocks/video/video.css
@@ -7,15 +7,17 @@
 
 .video::before {
     content: "";
-    width: 100%;
+    max-width: 100%;
+    height: 100%;
     z-index: 3;
     position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    top: 0%;
+    left: 0%;
+    right: 0%;
+    bottom: 0%;
     background-image: url(./../../images/video.jpg);
-    
+    background-size: cover;
+    background-position: center;
 }
 
 .video::after {
@@ -26,6 +28,7 @@
     left: 81px;
     font-size: 40px;
     color: white;
+    font-weight: bold;
 }
 
 .video:hover:before {
@@ -36,3 +39,12 @@
     display: none;
 }
     
+@media screen and (max-width: 605px) {
+    .video::after {
+        top: 34px;
+        left: 26px;
+        font-size: 34px;
+        color: white;
+        font-weight: bold;
+    }
+}
