--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,11 +1,11 @@
 .lead__subtitle {
-  max-width: 600px;
-  margin: 0 0 45px;
+  max-width: 610px;
+  margin: 0 0 0;
   text-align: start;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
-  font-size: 11px;
+  font-size: 18px;
   line-height: 1.2;
   color: #FECDA7;
 }
