--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,11 +1,12 @@
 .lead__title {
-  max-width: 600px;
-  margin: 0 auto 32px;
+  max-width: 610px;
+  margin: 0;
+  padding-top: 30px;
   text-align: start;
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
-  font-size: 30px;
+  font-size: 38px;;
   line-height: 1.5;
 }
 
