--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,7 +4,7 @@
   font-family: 'Inter', Arial, sans-serif;
   font-style: normal;
   font-weight: 900;
-  font-size: 30px;
+  font-size: 38px;;
   line-height: 1.06;
 }
 
