--- a/pages/index.css
+++ b/pages/index.css
@@ -4,6 +4,7 @@
 
 /* Шапка блок header */
 @import url(../blocks/header/header.css);
+@import url(../blocks/header/__menu/header__menu.css);
 @import url(../blocks/header/__list/header__list.css);
 @import url(../blocks/header/__list-item/header__list-item.css);
 @import url(../blocks/header/__link/header__link.css);
@@ -13,6 +14,7 @@
 
 /* Блок lead */
 @import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__text/lead__text.css);
 @import url(../blocks/lead/__title/lead__title.css);
 @import url(../blocks/lead/__subtitle/lead__subtitle.css);
 @import url(../blocks/lead/__picture/lead__picture.css);
