--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -6,9 +6,17 @@
   justify-content: space-between;
 }
 
+
+@media screen and (max-width: 1024px) {
+  .place__text {
+    margin: 0 35px;
+  }
+}
+
+
 @media screen and (max-width: 767px) {
   .place__text {
     padding: 40px 0 50px;
-    margin: 0 35px;
+    margin: 0 10px;
   }
 }
